# Cooper-Beta

./: .gitignore  LICENSE  MANIFEST.in  README.md  environment.yml  main.py  pyproject.toml  validator.yaml
.github/workflows/: publish.yml
beta_cooper/: geometry.py  parser.py  validator.py
beta_cooper/geometry/: __init__.py  cleaner.py  physics.py  topology.py
beta_cooper/validator/: __init__.py  analyzer.py  config.py  extractor.py  topology_checks.py
data/: manual_positive_label_notes.txt
data/external_methods/foldseek_smoke/: fake_foldseek.py  hits.tsv
data/external_methods/isitabarrel_smoke/: fake_isitabarrel.py  protid_list.tsv  results.tsv
data/external_methods/isitabarrel_smoke/maps/: toy_barrel.pkl
data/external_methods/pred_tmbb2_smoke/: fake_juchmme.py  input.fasta  juchmme_stdout.txt
data/scripts/: mpstruc_download_and_classify.py
external_methods/: README.md  __init__.py
external_methods/foldseek/: README.md  __init__.py  evaluate_dataset.py  runner.py  structure_search.py  structures.py
external_methods/isitabarrel/: README.md  __init__.py  contact_maps.py  runner.py  structure_map.py
external_methods/pred_tmbb2/: README.md  __init__.py  evaluate_dataset.py  runner.py  sequences.py  structure_sequence.py
real-data/: build_easy_negatives_from_pisces_cath.py
real-data/self_contained_positive_test/tuning/: fn_manual_review_status.csv  fn_manual_review_status_sparse_rescue.csv  manual_fn_notes.txt
scripts/: analyze_census.py  annotate_bfvd_candidates_blastp.py  batch_process.py  contactmap.py  copy_ok.py  eval_test.py  keep_ok_results.py  perturbation_eval.py  setup_env.sh
src/cooper_beta/: __init__.py  __main__.py  alignment.py  analysis_utils.py  analyzer.py  bootstrap.py  chain_slices.py  cli.py  config.py  constants.py  ellipse.py  exceptions.py  loader.py  models.py  pipeline.py  pipeline_workers.py  prepare_cache.py  provenance.py  results.py  runtime.py  slicer.py
src/cooper_beta/conf/: __init__.py  config.yaml
src/cooper_beta/conf/analyzer/: default.yaml
src/cooper_beta/conf/input/: default.yaml
src/cooper_beta/conf/output/: default.yaml
src/cooper_beta/conf/runtime/: default.yaml
src/cooper_beta/conf/slicer/: default.yaml
src/cooper_beta/evaluation/: __init__.py  __main__.py  app.py  metrics.py  runner.py
tests/: test_chain_slices.py  test_ellipse_fit.py  test_external_foldseek.py  test_external_isitabarrel.py  test_external_pred_tmbb2.py  test_geometric_rules.py  test_loader.py  test_pipeline_results.py  test_prepare_cache.py  test_provenance.py  test_public_scripts.py  test_runtime_pipeline.py  test_smoke.py
