[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cooper-beta"
version = "0.1.0"
description = "Beta-barrel-like chain detector for PDB/mmCIF structures."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Shuyu Zhong" },
]
keywords = ["bioinformatics", "beta-barrel", "protein-structure", "pdb", "mmcif"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "numpy>=1.23",
  "scipy>=1.10",
  "biopython>=1.81",
  "opencv-python-headless>=4.8",
  "hydra-core>=1.3",
  "tqdm>=4.0",
]

[project.optional-dependencies]
eval = [
  "pandas>=1.5",
]
full = [
  "pandas>=1.5",
]
dev = [
  "pytest>=7.0",
  "ruff>=0.5",
  "build>=1.2",
  "check-manifest>=0.49",
  "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/GeraltZeroZhong/Cooper-Beta"
Source = "https://github.com/GeraltZeroZhong/Cooper-Beta"
Issues = "https://github.com/GeraltZeroZhong/Cooper-Beta/issues"

[project.scripts]
cooper-beta = "cooper_beta.cli:main"
cooper-beta-eval = "cooper_beta.evaluation.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["cooper_beta*"]

[tool.setuptools.package-data]
cooper_beta = ["conf/**/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["data/scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.check-manifest]
ignore = [
  ".github/**",
  ".gitignore",
  "data/external_methods/**",
  "data/scripts/**",
  "external_methods/**",
  "main.py",
  "scripts/*.py",
  "tests/test_external_isitabarrel.py",
]
